rhythmbox-plugin-alternative-toolbar (0.17.4-0ubuntu1) zesty; urgency=medium

  * New upstream release
    - latest translations
    - show source toolbar for radio and podcasts
    - allow playqueue reordering of songs
  * Packaging Changes.
    - debian/control standards-version changed to 4.0.0
      debhelper changed to 10 and removed the now unnecessary
      dh_autoreconf build dependency
    - debian/copyright - extend copyright year

 -- David Mohammed <fossfreedom@ubuntu.com>  Thu, 13 Jul 2017 23:25:25 +0100

rhythmbox-plugin-alternative-toolbar (0.17.3-1) unstable; urgency=medium

  * New upstream release.
    - latest zh_CN translation
  * Packaging Changes.
    - debian/prerm and debian/postrm are shell scripts so start 
      with #!/bin/sh (Closes: #843278)

 -- David Mohammed <fossfreedom@ubuntu.com>  Sat, 05 Nov 2016 20:05:33 +0100

rhythmbox-plugin-alternative-toolbar (0.17.2-1) unstable; urgency=medium

  * New upstream release
    - Fix for RB 3.4
    - New pl translation
  * Packaging Changes
    - Updated maintainer email address
    - updated copyright year for Rosetta translations
    - added missing Vcs-Git to point to github debian branch
    - updated with relevant recommendations from cme check dpkg
    - added upstream metadata

 -- David Mohammed <fossfreedom@ubuntu.com>  Sun, 28 Aug 2016 20:23:47 +0100

rhythmbox-plugin-alternative-toolbar (0.17.1-1) unstable; urgency=medium

  * New upstream release. (Closes: #824708)
    - Option for dark theme
    - Display Browse Categories horizontally or vertically
    - Display app-menu correctly in budgie-desktop
    - Updated translations from Launchpad.net
    - correctly toggle search button via CTRL+F
    - option to force the display of the app-menu if required

 -- David Mohammed <foss.freedom@gmail.com>  Wed, 18 May 2016 21:59:51 +0100

rhythmbox-plugin-alternative-toolbar (0.16.3-1) unstable; urgency=medium

  * New upstream release. (Closes: #811263)