@@ -1,7 +1,0 @@
-#!/bin/sh
-set -e
-#DEBHELPER#
-
-python3 -m compileall /usr/lib/rhythmbox/plugins/alternative-toolbar/ > /dev/null 2>&1
-
-exit 0
